syntax = "proto3";
package Types;


//三维向量
message Vector3{
	float x = 1;
	float y = 2;
	float z = 3;
}

//边的类型
enum EdgeType {
  eph       = 0;
  estraight = 1;
  earc      = 2;
}

//构成轮廓的边
message Edge {
  Vector3  p1           = 1;  //起点
  Vector3  p2           = 2;  //终点
  EdgeType type         = 3;  //类型
  float    radius       = 4;  // 半径， 针对弧线
  Vector3  position     = 5;  // 圆心位置， 针对弧线
  float    start_angle  = 6;  // 起始角度
  float    end_angle    = 7;  // 终止角度
  bool     is_clockwise = 8;  // 是否为顺时针
}

//一个项目
message Project {
  string   uuid       = 1;  //项目id
  Hole     hole       = 2;  //洞
  repeated Wall walls = 3;  //墙体数组
  Stair    stair      = 4;  //楼梯
}

message Stair {

}

//洞
message Hole {
  string   uuid  = 1;
  repeated Edge edges  = 2;  //围成洞的边,边一定按顺序首尾相连
  float    floorHeight = 3;  //层高
}

//墙体类型
enum WallType {
  wph     = 0;  //占位
  wfirst  = 1;  //一层有二层无
  wsecond = 2;  //二层有一层无
  wboth   = 3;  //一二层皆有
  wnone   = 4;  //一二层皆无
}

//墙
message Wall {
  string   uuid        = 1;
  Edge     edge        = 2;  //墙体对应的边
  Edge     outEdge     = 3;  //墙体的外边
  WallType type        = 4;  //类型
  float    startExtend = 5;  //起点延伸
  float    endExtend   = 6;  //终点延伸
  float    depth       = 7;  //厚度
  float    height      = 8;  //高度
}

